CS59_Intellij/tests/invalid/printparens.dsl
/* invalid: print enclosed in parentheses */
Print("Hello").